--- a/botconfig.json
+++ b/botconfig.json
@@ -25,7 +25,9 @@
         "dungeonLevel" : 2,
         "delay" : 600,
         "maxRetry" : 3,
-        "respondWaitTime" : 4,
-        "allChat" : 1
+        "respondWaitTime" : 1.3,
+        "allChat" : 1,
+        "minDelay" : 10,
+        "maxDelay" : 25
     }
 }
